<?xml version="1.0"?>
<package format="2">
  <name>nhk2021_ilias</name>
  <version>0.0.0</version>
  <description>A meta package for nhk2021 team ilias</description>
  <maintainer email="fumiyaonishi1016@gmail.com">Fumiya Onishi</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>bezier_path_planning_pursuit</exec_depend>
  <exec_depend>joy_commander</exec_depend>
  <exec_depend>nhk2021_launcher</exec_depend>
  <exec_depend>nhk2021_simulator</exec_depend>
  <exec_depend>nhk2021_webgui</exec_depend>

  <export>
      <metapackage/>
  </export>
</package>
