<?xml version="1.0"?>
<package format="2">
  <name>joy_commander</name>
  <version>0.0.0</version>
  <description>The joy_commander package</description>
  <maintainer email="fumiyaonishi1016@gamil.com">Fumiya Onishi</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>joystick_drivers</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
