<?xml version="1.0"?>
<package format="2">
  <name>nhk2021_launcher</name>
  <version>0.0.0</version>
  <description>The nhk2021_launcher package</description>
  <maintainer email="fumiyaonishi1016@gmail.com">Fumiya Onishi</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>navigation</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joystick_drivers</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  
  <exec_depend>bno055_usb_stick</exec_depend>
  <exec_depend>wheelctrl</exec_depend>
  <exec_depend>serial_test</exec_depend>

</package>
