<?xml version="1.0"?>
<package format="2">
  <name>nhk2021_simulator</name>
  <version>0.0.0</version>
  <description>The nhk2021_simulator package</description>
  <maintainer email="fumiyaonishi1016@gmail.com">Fumiya Onishi</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>gazebo_ros</exec_depend> 
  <exec_depend>gazebo_ros_control</exec_depend> 
  <exec_depend>ros_control</exec_depend> 
  <exec_depend>ros_controllers</exec_depend> 
  <exec_depend>robot_state_publisher</exec_depend> 
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>realsense_gazebo_plugin</exec_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}/worlds" />
    <gazebo_ros gazebo_model_path="${prefix}/models" /> 
  </export>
</package>
